# openlierox

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeOlxCommon.cmake  CMakeOlxVersion.cmake  DEDICATED_SERVER.md  DEPS  OpenLieroX.rc.in  README.md  build-android.sh  build.sh  functions.sh  get_version_full.sh  package-deb.sh  package-macos.sh  package-windows.sh  run-android-emulator.sh  start_dedicated_server.sh
.github/workflows/: build-linux.sh  build-windows.sh  build.sh  build.yml  flatpak.yml  master-release.yaml  package-android.yml  package-deb.sh  package-deb.yml  package-linux-bundle.sh  package-linux-bundle.yml  package-linux-deb.yml  package-mac.yml  package-macos.sh  package-wasm.yml  package-windows.sh  package-windows.yml  publish-to-google-play.yaml  release-beta.yml
debian/: control  rules
doc/: DEDICATED_SERVER.md  README
doc/dev/: GAMEPAD.md  TOUCHSCREEN.md  WIDESCREEN.md
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
fastlane/metadata/en/: description.txt  keywords.txt  marketing_url.txt  name.txt  promotional_text.txt  subtitle.txt
flatpak/: net.openlierox.OpenLieroX.yaml
include/: AuxLib.h  CClient.h  CClientNetEngine.h  CInput.h  CServer.h  CServerNetEngine.h  CViewport.h  CWormHuman.h  Color.h  Debug.h  FeatureList.h  GamepadDiagnostics.h  GfxPrimitives.h  HTTP.h  InputEvents.h  Networking.h  Options.h  Physics.h  PrecompiledHeader.hpp  Protocol.h  StringUtils.h  TouchControls.h  TouchScreenInput.h  Unicode.h  Version.h  XMLutils.h  olx-types.h
include/DeprecatedGUI/: CAnimation.h  CBox.h  CBrowser.h  CButton.h  CCheckbox.h  CCombobox.h  CGuiLayout.h  CGuiSkinnedLayout.h  CImage.h  CInputBox.h  CLabel.h  CLine.h  CListview.h  CMenu.h  CProgressbar.h  CScrollbar.h  CSlider.h  CTextButton.h  CTextbox.h  CTitleButton.h  CWidget.h  Graphics.h  Menu.h
libs/: breakpad_getallsources.py
libs/hawknl/src/: condition.c  errorstr.c  loopback.c
libs/pstreams/: pstream.h
share/: OpenLieroX-windows.manifest
share/gamedir/cfg/: dedicated_config.py  dedicated_config_lx56.py  masterservers.txt
share/gamedir/scripts/: DedServerWatcher.py  ded_fixed_gamemode  dedicated_control  dedicated_control_handler.py  dedicated_control_io.py  dedicated_control_ranking.py  dedicated_control_usercommands.py  pwn0meter.py  simulator.py
share/gamedir/scripts/presets/: CTF  (+10 more)
share/gamedir/touchscreen/: classic.yaml  right-aligned.yaml  rightside.yaml
src/: MacHelpers.m  MainLoop.cpp  main.cpp
src/client/: AuxLib.cpp  CClient.cpp  CClient_Draw.cpp  CClient_Game.cpp  CClient_Parse.cpp  CClient_Send.cpp  CFont.cpp  CInput.cpp  CViewport.cpp  Entity.cpp  Error.cpp  GamepadDiagnostics.cpp  GfxPrimitives.cpp  IRC.cpp  InputEvents.cpp  OpenExternBrowser.cpp  Options.cpp  TouchControls.cpp  TouchScreenInput.cpp
src/client/DeprecatedGUI/: CBrowser.cpp  CButton.cpp  CChatWidget.cpp  CCheckbox.cpp  CCombobox.cpp  CGuiLayout.cpp  CImage.cpp  CInputBox.cpp  CLabel.cpp  CListview.cpp  CMenu.cpp  CScrollbar.cpp  CSlider.cpp  CTextbox.cpp  CWidget.cpp  Graphics.cpp  MenuSystem.cpp  Menu_FloatingOptions.cpp  Menu_Local.cpp  Menu_Main.cpp  Menu_Mapeditor.cpp  Menu_Net.cpp  Menu_Net_Chat.cpp  Menu_Net_Favourites.cpp  Menu_Net_Host.cpp  Menu_Net_Internet.cpp  Menu_Net_Lan.cpp  Menu_Net_Main.cpp  Menu_Net_News.cpp  Menu_Options.cpp  Menu_Player.cpp
src/common/: CMap.cpp  CShootList.cpp  CWorm.cpp  CWormBot.cpp  CWormHuman.cpp  CWorm_SendRecv.cpp  Command.cpp  Debug.cpp  Debug_DumpCallstack.cpp  Debug_GetCallstack.cpp  Debug_WriteCoreDump.cpp  FeatureList.cpp  FileDownload.cpp  FindFile.cpp  GeoIPDatabase.cpp  HTTP.cpp  MapLoader_Teeworlds.cpp  Networking.cpp  Physics.cpp  PhysicsLX56_Projectiles.cpp  SMTP.cpp  StringUtils.cpp  SystemFunctions.cpp  TeeStdoutHandler.cpp  ThreadPool.cpp  Timer.cpp  Version.cpp
src/game/: Attr.cpp  CMap.h  CWorm.h  Game.cpp  Game.h  GameState.cpp  ServerList.cpp  ServerList.h  SettingsPreset.cpp  SinglePlayer.cpp
src/gui/: List.cpp
src/gusanos/: base_worm.cpp  gconsole.cpp  gfx.cpp  menu.cpp  viewport.cpp
src/gusanos/blitters/: blitters.h
src/gusanos/lua/: bindings-game.cpp  bindings-gfx.cpp  bindings-math.cpp  bindings-network.cpp  bindings-objects.cpp  bindings-resources.cpp  bindings.cpp
src/gusanos/luaapi/: context.cpp
src/server/: CServer.cpp  CServerConnection.cpp  CServer_Game.cpp  CServer_Parse.cpp  CServer_Send.cpp
src/util/: IPrintOutFct.h  StringConv.h  math_func.h
tools/DedicatedServerSetupDebian/: README  setup.sh
tools/FixIncompleteCrashReport/: fixer.py  kmailpipehandler.py
tools/OLXLogAnalyser/: logins.py
tools/lxl2gusmap/: lx_level.py  lxl2gusmap.py
(+6 files in other folders)
